stretched images fixed

--- a/packages/frontend/src/components/Game/GameBoard/Tile/style.scss
+++ b/packages/frontend/src/components/Game/GameBoard/Tile/style.scss
@@ -3,14 +3,15 @@
 .tile {
   height: 100px;
   width: 100px;
-
+  overflow: hidden;
   @include breakpoint(md) {
     height: 200px;
     width: 200px;
   }
 
   img {
+    object-fit: contain; /* keep aspect ratio */
     width: 100%;
-    height: 100%;
+    margin-bottom: 1rem;
   }
 }
